--- a/po/wesnoth/fi.po
+++ b/po/wesnoth/fi.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-01-22 15:00+0100\n"
-"PO-Revision-Date: 2012-04-04 14:02+0300\n"
+"PO-Revision-Date: 2012-04-07 02:23+0300\n"
 "Last-Translator: Jarkko Patteri <jarkkopatteri@gmail.com>\n"
 "Language-Team: Finnish <http://wiki.wesnoth.org/FinnishTranslation>\n"
 "Language: fi\n"
@@ -3747,7 +3747,7 @@ msgstr "Sinulla ei ole yhtään lisäosaa."
 #: src/addon/manager.cpp:1416
 msgid "Are you sure you want to remove the following installed add-on?"
 msgid_plural "Are you sure you want to remove the following installed add-ons?"
-msgstr[0] "Haluatko varmasti poistaa lisäosan '$addon|'?"
+msgstr[0] "Haluatko varmasti poistaa lisäosan?"
 msgstr[1] "Haluatko varmasti poistaa lisäosat?"
 
 #: src/addon/manager.cpp:1442
