eclipse plugin: if the paths object is not valid stop creating the project

--- a/utils/umc_dev/org.wesnoth/src/org/wesnoth/messages.properties
+++ b/utils/umc_dev/org.wesnoth/src/org/wesnoth/messages.properties
@@ -147,6 +147,7 @@ PreprocessorUtils_12=The file is null or does not exist
 ProjectUtils_0=Cleaning files...
 ProjectUtils_4=Creating project '%s' ...
 ProjectUtils_6=Configuring project...
+ProjectUtils_7=Please select a valid install, or create one if none exists.
 ResourceUtils_5=Error creating the resource
 ScenarioNewWizard_0=Create a new scenario
 ScenarioNewWizard_2=Creating 
