eclipse plugin: update the changelog

--- a/utils/umc_dev/changelog
+++ b/utils/umc_dev/changelog
@@ -1,5 +1,11 @@
 Eclipse plugin changelog
 
+2.0.1
+	* Fixed the ``WML Tools" menu not appearing on the projects context menu.
+	* Fixed the highlighting of the #endif preprocessor define.
+	* The projects cannot be created anymore until a default is created and selected
+	in the wizard.
+
 2.0.0
 	* The standalone version now has all the proper save/new/undo/redo 
     buttons in the menus.
