--- a/po/wesnoth-manual/pt_BR.po
+++ b/po/wesnoth-manual/pt_BR.po
@@ -10,8 +10,8 @@ msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.3.7+svn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-01-03 10:55+0100\n"
-"PO-Revision-Date: 2011-06-13 12:53-0300\n"
-"Last-Translator: Diego Inácio Goergen <thegoergen@gmail.com>\n"
+"PO-Revision-Date: 2012-04-18 23:34-0300\n"
+"Last-Translator: Davi Duarte Pinheiro <daviduartep@gmail.com>\n"
 "Language-Team: Portuguese/Brazil\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
@@ -1447,9 +1447,8 @@ msgstr "Ctrl-e"
 # type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
 #. type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth/doc/manual/manual.en.xml:719
-#, fuzzy
 msgid "Toggle ellipses"
-msgstr "Alterna exibição da grade"
+msgstr "Alterar elipses"
 
 # type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
 #. type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
@@ -1560,7 +1559,7 @@ msgstr "Atualiza a neblina agora"
 #. type: Content of: <book><chapter><section><table><title>
 #: /src/wesnoth/doc/manual/manual.en.xml:825
 msgid "Unit and turn specific hotkeys"
-msgstr ""
+msgstr "Teclas de atalho especificas de unidades e turno."
 
 # type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
 #. type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
@@ -1784,9 +1783,8 @@ msgstr "p"
 # type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
 #. type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth/doc/manual/manual.en.xml:999
-#, fuzzy
 msgid "Toggle planning mode"
-msgstr "Alterna modo de jogo acelerado"
+msgstr "Alterar modo de planejamento"
 
 #. type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth/doc/manual/manual.en.xml:1004
@@ -1806,7 +1804,7 @@ msgstr "h"
 #. type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth/doc/manual/manual.en.xml:1015
 msgid "Delete planned action"
-msgstr ""
+msgstr "Deletar ação planejada"
 
 #. type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth/doc/manual/manual.en.xml:1020
@@ -2010,7 +2008,7 @@ msgstr "f"
 #. type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth/doc/manual/manual.en.xml:1181
 msgid "Run AI formula"
-msgstr ""
+msgstr "Rodar formula de IA"
 
 #. type: Content of: <book><chapter><section><simpara>
 #: /src/wesnoth/doc/manual/manual.en.xml:1187
@@ -2053,9 +2051,8 @@ msgstr ""
 # type: Content of: <book><chapter><section><table><title>
 #. type: Content of: <book><chapter><section><table><title>
 #: /src/wesnoth/doc/manual/manual.en.xml:1240
-#, fuzzy
 msgid "Pandora specific controls and hotkeys"
-msgstr "Controles e atalhos"
+msgstr "Controles e teclas de atalho especificas de Pandora"
 
 #. type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth/doc/manual/manual.en.xml:1247
@@ -2065,42 +2062,42 @@ msgstr ""
 #. type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth/doc/manual/manual.en.xml:1255
 msgid "GamingButton A"
-msgstr ""
+msgstr "Botão de Jogo A"
 
 #. type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth/doc/manual/manual.en.xml:1263
 msgid "GamingButton B"
-msgstr ""
+msgstr "Botão de Jogo B"
 
 #. type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth/doc/manual/manual.en.xml:1271
 msgid "GamingButton X"
-msgstr ""
+msgstr "Botão de Jogo X"
 
 #. type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth/doc/manual/manual.en.xml:1279
 msgid "GamingButton Y"
-msgstr ""
+msgstr "Botão de Jogo Y"
 
 #. type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth/doc/manual/manual.en.xml:1287
 msgid "Alt+GamingButton Y"
-msgstr ""
+msgstr "Alt + Botão de Jogo Y"
 
 #. type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth/doc/manual/manual.en.xml:1290
 msgid "Move action down queue"
-msgstr ""
+msgstr "Mover ação para baixo da fila"
 
 #. type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth/doc/manual/manual.en.xml:1295
 msgid "Alt+GamingButton X"
-msgstr ""
+msgstr "Alt + Botão de Jogo X"
 
 #. type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth/doc/manual/manual.en.xml:1298
 msgid "Move action up queue"
-msgstr ""
+msgstr "Mover ação para cima da fila"
 
 # type: Content of: <book><chapter><section><simpara>
 #. type: Content of: <book><chapter><section><simpara>
