updated Galician and Korean translation

--- a/po/wesnoth-multiplayer/ko.po
+++ b/po/wesnoth-multiplayer/ko.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.1.1+svn\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-01-22 15:00+0100\n"
-"PO-Revision-Date: 2012-02-25 15:51+0900\n"
+"PO-Revision-Date: 2012-04-25 19:11+0900\n"
 "Last-Translator: mistzone <drier22@gmail.com>\n"
 "Language-Team: none\n"
 "Language: \n"
@@ -100,7 +100,7 @@ msgstr "언데드"
 #. [multiplayer]: id=multiplayer_Aethermaw
 #: data/multiplayer/scenarios/2p_Aethermaw.cfg:4
 msgid "2p — Aethermaw"
-msgstr "2p - Aethermaw"
+msgstr "2p - 천공의 구멍"
 
 #. [multiplayer]: id=multiplayer_Aethermaw
 #: data/multiplayer/scenarios/2p_Aethermaw.cfg:6
@@ -118,6 +118,15 @@ msgid ""
 "herself by arranging battles between the mortal beings unlucky enough to be "
 "drawn into its depths. Designed by Doc Paterson."
 msgstr ""
+"오랜 옛날, 대마법사 술라는 혼돈의 힘을 가진 신비한 에너지의 중심부인 천공의 "
+"구멍에 봉인되었다. 하지만, 술라는 수백년이 지나는 동안 점점 그녀의 힘을 바로 "
+"그 천공의 구멍 속 혼돈의 폭풍에 맞추어 갔으며, 이제는 그 영향력을 물질 세계"
+"에, 수백개의 다른 세계와 현실과 시간대에 있는 영토들에 행사하기 위한 작업을 "
+"시작했다. 그녀는 우주의 서로 다른 조각들을 조종하고, 합치고, 천공의 구멍과 원"
+"래의 장소로 왔다갔다 보내는 실험을 한다. 어쩌면 그녀 술라가 천공의 구멍을 다"
+"루는 데 점점 통달해 가게 되면 언젠가는 그 구속을 풀고 자유를 찾을지도 모른"
+"다. 그 순간이 오기까지는, 그녀는 언제까지고 이 심연 속에 떨어진 불운한 필멸자"
+"들을 싸움붙이면서 재미를 만끽할 것이다. Doc Paterson 작품."
 
 #. [side]
 #: data/multiplayer/scenarios/2p_Aethermaw.cfg:22
@@ -182,7 +191,7 @@ msgstr "남쪽 팀"
 #. [message]: speaker=narrator
 #: data/multiplayer/scenarios/2p_Aethermaw.cfg:288
 msgid "Aethermaw — Created by Doc Paterson"
-msgstr ""
+msgstr "천공의 구멍 — Doc Paterson 작품"
 
 #. [message]: speaker=narrator
 #: data/multiplayer/scenarios/2p_Aethermaw.cfg:302
@@ -202,12 +211,25 @@ msgid ""
 "unite the two halves of the battlefield. The process will be complete by the "
 "end of turn 6.</span>\n"
 msgstr ""
+"대마법사 술라가 당신의 군단을 이 기이한 중심점으로 소환해서, 서로 싸움으로써 "
+"그녀를 즐겁게 해주길 바라고 있다.\n"
+"\n"
+"\n"
+"\n"
+"\n"
+"<span color='red'>참고:</span>\n"
+"\n"
+"<span color='green'>유닛은 비석이 있는 칸으로는 들어갈 수 없습니다. 하지만 "
+"그 칸에서 소집된 상태에서 밖으로 나갈 수는 있습니다.</span>\n"
+"\n"
+"<span color='green'>4턴부터 대마법사 술라는 두개로 갈라진 전장을 하나로 합치"
+"기 시작합니다. 그 과정은 6턴이 끝나면 완료됩니다.</span>\n"
 
 #. [message]: speaker=narrator
 #: data/multiplayer/scenarios/2p_Aethermaw.cfg:315
 #: data/multiplayer/scenarios/2p_Aethermaw.cfg:332
 msgid "The Aethermaw growls."
-msgstr ""
+msgstr "천공의 구멍이 흔들린다."
 
 #. [multiplayer]: id=multiplayer_Arcanclave_Citadel
 #: data/multiplayer/scenarios/2p_Arcanclave_Citadel.cfg:6
@@ -1326,7 +1348,7 @@ msgid ""
 "Warfare transforms the simple farms and villages of a peaceful region into a "
 "subtly parceled battlefield."
 msgstr ""
-"전쟁은 평화로운 지역의 단순한 농장과 마을들을 미묘하게 갈라진 저낭으로 바꿔버"
+"전쟁은 평화로운 지역의 단순한 농장과 마을들을 미묘하게 갈라진 전장으로 바꿔버"
 "립니다."
 
 #. [multiplayer]: id=multiplayer_Isars_Cross
