updated Italian translation

--- a/po/wesnoth-units/it.po
+++ b/po/wesnoth-units/it.po
@@ -14,7 +14,7 @@ msgstr ""
 "Project-Id-Version: it\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-01-21 01:45+0100\n"
-"PO-Revision-Date: 2012-04-06 19:30+0100\n"
+"PO-Revision-Date: 2012-05-03 11:39+0100\n"
 "Last-Translator: Antonio 'Antro' Rosella <arosella@yahoo.com>\n"
 "Language-Team: Italian <>\n"
 "Language: it\n"
@@ -317,7 +317,7 @@ msgstr ""
 "Eccezion fatta per coloro con capacità quasi soprannaturali, il grado più "
 "alto a cui un fabbro delle rune può ascendere è quello di Nano maestro delle "
 "rune. Menando colpi potenti quasi come quelli dei migliori guerrieri, "
-"sarebbero temibili senza le loro arti, ma con esse sono praticamente "
+"sarebbero già temibili senza le loro arti, ma con esse sono praticamente "
 "invincibili, in quanto le loro rune fanno sì che gli attacchi fisici dei "
 "loro nemici causino meno danno di quanto ci si potrebbe aspettare."
 
@@ -354,7 +354,7 @@ msgstr ""
 "I pipistrelli sanguinari sono così chiamati a causa del loro colore "
 "rubicondo, che alcuni ascrivono a simbolo della loro dieta preferita. Sono "
 "veloci e possono succhiare il sangue delle loro vittime, assorbendo con esso "
-"parte della salute persa dall’attaccato."
+"parte della forza vitale persa dalle loro vittime."
 
 #. [attack]: type=blade
 #. [attack]: type=pierce
@@ -791,8 +791,8 @@ msgstr ""
 "qualcuno ad assumersi l’onere di cacciare quando si potrebbe acquisire ben "
 "più gloria sul campo di battaglia\n"
 "\n"
-"Molto spesso, i leggeri prendo parti a grande battute di caccia al cervo, al "
-"cinghiale o al delfino: l’ancestrale abilità dei draghi di sputare fuoco, "
+"Molto spesso, i leggeri prendono parte a grande battute di caccia al cervo, "
+"al cinghiale o al delfino: l’ancestrale abilità dei draghi di sputare fuoco, "
 "limitata dall’armatura nelle altre classi, è impagabile per indirizzare e "
 "radunare le prede senza ferirle. Se un leggero è chiamato in battaglia, "
 "preferisce disturbare il nemico da lontano - e se ogni altro tentativo "
@@ -872,7 +872,7 @@ msgstr ""
 "l’aria. In qualità di comandanti della caccia, spesso rimangono a lungo "
 "lontano dalle loro case. Ciascuno di loro prova a portare a casa quanto più "
 "bottino possibile, in competizione con gli altri per guadagnare il rispetto "
-"della  tribù e, se il caso, e un po’ di tempo con una delle controllatissime "
+"della  tribù e, se il caso, un po’ di tempo con una delle controllatissime "
 "dragonesse. "
 
 #. [unit_type]: id=Drake Thrasher, race=drake
